# flightmare

./: README.md
flightlib/: CMakeLists.txt  package.xml
flightlib/include/flightlib/bridges/: unity_bridge.hpp  unity_message_types.hpp
flightlib/include/flightlib/objects/: aruco_gate.hpp  static_gate.hpp
flightlib/src/bridges/: unity_bridge.cpp
flightlib/tests/bridges/: unity_bridge.cpp
flightrender/: CMakeLists.txt  package.xml
flightrender1/: CMakeLists.txt  package.xml
flightrender2/: CMakeLists.txt  package.xml
flightrender3/: CMakeLists.txt  package.xml
flightrender4/: CMakeLists.txt  package.xml
flightros/: .gitignore  CMakeLists.txt  dependencies.yaml  package.xml
flightros/config/: 3person.yaml  fpv.yaml  gates.yaml  gates_2.yaml  solar_panel (copia).yaml  solar_panel.yaml  ventral.yaml
flightros/include/flightros/camera/: camera.hpp
flightros/include/flightros/gates/: gates.hpp
flightros/include/flightros/pilot/: circuit_pilot.hpp  flight_pilot.hpp
flightros/launch/camera/: camera_launch.py
flightros/launch/pilot/: flight_pilot_launch.py  flight_pilot_launch_2.py
flightros/params/: default.yaml
flightros/src/camera/: camera.cpp  camera_node.cpp
flightros/src/pilot/: circuit_pilot.cpp  circuit_pilot_node.cpp  flight_pilot.cpp  flight_pilot_node.cpp
