<?xml version="1.0"?>
<package format="2">
  <name>flightrender3</name>
  <version>0.0.1</version>
  <description>Flightmare Render Engine built on Unity</description>

  <maintainer email="song@ifi.uzh.ch">Yunlong Song</maintainer>

  <license>GNU GPL</license>
    <!-- <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>